--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^6.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "hoek": "^4.2.1",
     "moment": "^2.19.3",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.0.0-rc.0",
